--- a/css/reset.css
+++ b/css/reset.css
@@ -2,6 +2,7 @@
     padding: 0px !important;
     border: 0px !important;
     margin: 0px !important;
+    font-family: OpenSans-Regular;
 }
 /*Vareaveis*/
 :root {
