--- a/css/reset.css
+++ b/css/reset.css
@@ -18,9 +18,48 @@
 }
 /*Carroeis*/
 .carousel-control-next-icon {
-    background-image: url(../img/icons/f4.png) !important;
+    background-image: url(../img/icon/Carossel01.png) !important;
 }
 .carousel-control-prev-icon {
-    background-image: url(../img/icons/f3.png) !important;
+    background-image: url(../img/icon/Carossel02.png) !important;
 }
 /*Carroeis*/
+
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    position: relative;
+    padding: 5rem !important;
+}
+.popup textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+}
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+.close-btn {
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    color: rgb(255, 0, 0);
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
