--- a/css/reset.css
+++ b/css/reset.css
@@ -26,25 +26,27 @@
 /*Carroeis*/
 
 
-.popup {
+
+.popup, .popup2 {
     display: none;
     position: fixed;
     top: 0%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
-    padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     position: relative;
-    padding: 5rem !important;
+    padding: 2rem 3rem !important;
 }
-.popup textarea {
+.popup textarea, .popup2 textarea {
     width: 100%;
     height: 100px;
     margin-bottom: 10px;
+    padding: 0.5rem 2rem !important;
+    border: 1px solid #000 !important;
 }
-.overlay {
+.overlay, .overlay2 {
     display: none;
     position: fixed;
     top: 0;
@@ -53,13 +55,15 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
 }
-.close-btn {
+.close-btn, .close-btn2 {
     position: absolute;
-    top: 0px;
+    top: 10px;
     right: 10px;
     color: rgb(255, 0, 0);
     border: none;
     padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
+    font-size: 1.2rem;
+    background: transparent;
 }
