--- a/css/reset.css
+++ b/css/reset.css
@@ -27,7 +27,7 @@
 
 
 
-.popup, .popup2 {
+.popup, .popup2, .popup3 {
     display: none;
     position: fixed;
     top: 0%;
@@ -39,14 +39,17 @@
     position: relative;
     padding: 2rem 3rem !important;
 }
-.popup textarea, .popup2 textarea {
+#popup3 {
+    top: -250px !important;
+}
+.popup textarea, .popup2 textarea, .popup3 textarea {
     width: 100%;
     height: 100px;
     margin-bottom: 10px;
     padding: 0.5rem 2rem !important;
     border: 1px solid #000 !important;
 }
-.overlay, .overlay2 {
+.overlay, .overlay2, .overlay3 {
     display: none;
     position: fixed;
     top: 0;
@@ -55,7 +58,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
 }
-.close-btn, .close-btn2 {
+.close-btn, .close-btn2, .close-btn3 {
     position: absolute;
     top: 10px;
     right: 10px;
